# crate-db

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
.github/.workflows/: checks.yaml
.github/workflows/: checks.yaml
crate-db/: app.py  config.yaml  exceptions.py
crate-db/api/: crate-db-specs.modified.yaml  crate-db-specs.yaml
crate-db/ga4gh/controllers/: server.py
crate_db/: __init__.py  app.py  config.yaml  exceptions.py
crate_db/api/: __init__.py  crate_db_specs.yaml
crate_db/api/elixircloud/: __init__.py
crate_db/api/elixircloud/controllers/: __init__.py  crate_db.py
crate_db/api/elixircloud/crate_db/: __init__.py
crate_db/api/elixircloud/crate_db/controllers/: __init__.py  create_crate.py  delete_crate.py  read_crate.py  read_crates.py  update_crate.py
crate_db/api/ga4gh/: __init__.py  service_info.py
crate_db/api/ga4gh/controllers/: __init__.py  crate_db_controller.py  service_info.py
crate_db/api/ga4gh/service_info/: __init__.py
crate_db/api/ga4gh/service_info/controllers/: __init__.py  create_service_info.py  read_service_info.py  update_service_info.py
crate_db/api/specs/: crate_db_specs.yaml
crate_db/ga4gh/: __init__.py  service_info.py
crate_db/ga4gh/controllers/: __init__.py  server.py
crate_db/ga4gh/services/: __init__.py
deployment/: config.yaml
tests/: __init__.py  test_app.py  test_example.py  test_exceptions.py
tests/test_integration/: test_endpoints.py
